--- a/styles/phb.style.less
+++ b/styles/phb.style.less
@@ -1,8 +1,8 @@
 
-@import (less) 'shared/naturalcrit/styles/reset.less';
-@import (less) './client/homebrew/phbStyle/phb.fonts.css';
-@import (less) './client/homebrew/phbStyle/phb.assets.less';
-@import (less) './client/homebrew/phbStyle/phb.depricated.less';
+@import (less) 'reset.less';
+@import (less) 'phb.fonts.css';
+@import (less) 'phb.assets.less';
+@import (less) 'phb.depricated.less';
 //Colors
 @background            : #EEE5CE;
 @noteGreen             : #e0e5c1;
