--- a/styles/core.less
+++ b/styles/core.less
@@ -1,16 +1,16 @@
 
-@import 'naturalcrit/styles/reset.less';
+@import 'reset.less';
 //@import 'naturalcrit/styles/elements.less';
-@import 'naturalcrit/styles/animations.less';
-@import 'naturalcrit/styles/colors.less';
-@import 'naturalcrit/styles/tooltip.less';
+@import 'animations.less';
+@import 'colors.less';
+@import 'tooltip.less';
 @font-face {
 	font-family : CodeLight;
-	src         : url('/assets/naturalcrit/styles/CODE Light.otf');
+	src         : url('CODE Light.otf');
 }
 @font-face {
 	font-family : CodeBold;
-	src         : url('/assets/naturalcrit/styles/CODE Bold.otf');
+	src         : url('CODE Bold.otf');
 }
 html,body, #reactRoot{
 	height      : 100vh;
